# API

./: .gitignore  README.md  a.json  pyproject.toml
.github/workflows/: ecr-publish.yml
ecs/: Dockerfile
ecs/app/: app.py  config.py  dynamodb.py
lambda/authorizer/: handler.py
lambda/get_item/: handler.py
lambda/post_item/: handler.py
