[project]
name = "api"
version = "0.1.0"
description = "API Gateway Lambdas and ECS FastAPI service for collision report DynamoDB access"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.35.0",
    "fastapi>=0.115.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ecs"]

[tool.uv]
package = true
